--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,7 +57,7 @@ jobs:
           fields: repo,message,commit,author,took
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ success() }}
+        if: ${{ github.event_name == 'push' && success() }}
       - name: slack notification - failure
         uses: 8398a7/action-slack@v3
         with:
@@ -65,4 +65,4 @@ jobs:
           fields: repo,message,commit,author,took
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ failure() }}
+        if: ${{ github.event_name == 'push' && failure() }}
