--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,19 +50,27 @@ jobs:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
-      - name: slack notification - success
+      - name: Slack - success 
+        uses: 8398a7/action-slack@v3
+        if: ${{success() && github.event_name == 'push' && !contains(join(github.event.commits.*.message) , '#skip')}}
+        with:
+          status: custom
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took 
+          custom_payload: |
+            {
+              attachments: [{
+                color: 'good',
+                text: `A new version of ${process.env.AS_REPO} deployed to https://fast-thicket-25502.herokuapp.com (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR} and build took ${process.env.AS_TOOK}.`
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} 
+
+      - name: Slack - failure
+        if: ${{failure() && github.event_name == 'push' && !contains(join(github.event.commits.*.message) , '#skip')}}
         uses: 8398a7/action-slack@v3
         with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,author,took
+          status: ${{job.status}}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took 
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ github.event_name == 'push' && success() }}
-      - name: slack notification - failure
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,author,took
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: ${{ github.event_name == 'push' && failure() }}
