--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,7 +60,7 @@ jobs:
             {
               attachments: [{
                 color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
-                text: `${process.env.AS_JOB} of ${process.env.AS_REPO ${{ job.status }} in ${process.env.AS_TOOK}`,
+                text: `${process.env.AS_JOB} of ${process.env.AS_REPO} ${{ job.status }} in ${process.env.AS_TOOK}`,
               }]
             }
         env:
